Added difficulties + vibed hard

--- a/Sem2Workshop2/asl-interpreter-beginner.ipynb
+++ b/Sem2Workshop2/asl-interpreter-beginner.ipynb
@@ -118,11 +118,9 @@
     "import cv2\n",
     "\n",
     "# TODO: Let's load in an image and display it (using openCV imread ideally...).\n",
-    "example_image = ... # Image path...\n",
-    "img = ...\n",
-    "\n",
-    "# Show the image using matplot...\n",
-    "..."
+    "example_image = ... # Image path (You'll find it on the right!)\n",
+    "img = cv2.imread(...)\n",
+    "plt.imshow(...)"
    ]
   },
   {
@@ -152,10 +150,8 @@
    "outputs": [],
    "source": [
     "# TODO: Convert the BGR image to an RGB one.\n",
-    "img_rgb = ...\n",
-    "\n",
-    "# Show the image using matplot...\n",
-    "..."
+    "img_rgb = cv2.cvtColor(..., ...)\n",
+    "plt.imshow(...)"
    ]
   },
   {
@@ -199,18 +195,18 @@
    },
    "outputs": [],
    "source": [
-    "# TODO: We're going to use the hands library. \n",
-    "mp_hands = ...\n",
-    "mp_drawing = ...\n",
-    "mp_drawing_styles = ...\n",
+    "# We're going to use the hands library. \n",
+    "mp_hands = mp.solutions.hands\n",
+    "mp_drawing = mp.solutions.drawing_utils\n",
+    "mp_drawing_styles = mp.solutions.drawing_styles\n",
     "\n",
-    "# TODO: We want to now initialise the Hands class. Keep in mind, \n",
+    "# We want to now initialise the Hands class. Keep in mind, \n",
     "# we'll using it on a static image (ie static_image_mode) \n",
     "# and will want to be reasonably confident (at least 30%)\n",
-    "hands = ...\n",
+    "hands = mp_hands.Hands(static_image_mode=True, min_detection_confidence=0.3)\n",
     "\n",
     "# TODO: Process the RGB photo\n",
-    "hand_landmarks = ...\n",
+    "hand_landmarks = hands.process(...)\n",
     "\n",
     "# We're going to iterate over each landmark and draw it.\n",
     "for landmark in hand_landmarks.multi_hand_landmarks:\n",
@@ -218,13 +214,13 @@
     "    # We could do with the drawing_utils' draw_landmarks function right about now.\n",
     "    mp_drawing.draw_landmarks(\n",
     "            ...,  # TODO: image to draw on\n",
-    "            ...,  # TODO: Each individual landmark of the hand\n",
+    "            landmark,  # the landmarks for the hand\n",
     "            mp_hands.HAND_CONNECTIONS,  # hand connections\n",
     "            mp_drawing_styles.get_default_hand_landmarks_style(),\n",
     "            mp_drawing_styles.get_default_hand_connections_style()\n",
     "        )\n",
     "\n",
-    "    ... # TODO: Plot the RGB image\n"
+    "    plt.imshow(img_rgb)\n"
    ]
   },
   {
@@ -250,19 +246,19 @@
    },
    "outputs": [],
    "source": [
-    "# TODO: Instantiate the Hands class\n",
-    "mp_hands = ...\n",
-    "hands = ...\n",
+    "# Instantiate the Hands class\n",
+    "mp_hands = mp.solutions.hands\n",
+    "hands = mp_hands.Hands(static_image_mode=True, min_detection_confidence=0.3)\n",
     "\n",
     "def take_image_path_and_return_landmarks(img_path):\n",
-    "    # TODO: Read the image using OpenCV (same as above!)\n",
-    "    img = ...\n",
+    "    # TODO: Read the image\n",
+    "    img = cv2.imread(...)\n",
     "    \n",
     "    # TODO: Turn the image into RGB\n",
-    "    img_rgb = ...\n",
+    "    img_rgb = cv2.cvtColor(..., ...)\n",
     "    \n",
     "    # Process the RGB image\n",
-    "    hand_landmarks = ...\n",
+    "    hand_landmarks = hands.process(...)\n",
     "    \n",
     "    return hand_landmarks"
    ]
@@ -307,11 +303,11 @@
     "    data = []\n",
     "    labels = []\n",
     "    # We want to iterate over the entire training folder. \n",
-    "    for dir_ in tqdm(os.listdir(DATA_DIR)):\n",
+    "    for dir_ in (os.listdir(DATA_DIR)):\n",
     "        \n",
     "        # Iterate over every single letter in each letter's folder. \n",
     "        # We're only going to take the 30 images, it's incredibly slow otherwise.\n",
-    "        for img_path in os.listdir(os.path.join(DATA_DIR, dir_))[:30]:\n",
+    "        for img_path in tqdm(os.listdir(os.path.join(DATA_DIR, dir_))[:30]):\n",
     "\n",
     "            # We'll store our coordinates here, temporarily, as we normalise them.\n",
     "            x_ = []\n",
@@ -336,11 +332,9 @@
     "                \n",
     "                data_aux = []\n",
     "                for i in range(len(hand_landmarks.landmark)):\n",
-    "                    # TODO: This normalises them to be all centered at 0.\n",
-    "                    # We want each the smallest datapoint to be taken\n",
-    "                    # away from each datapoint...\n",
-    "                    data_aux.append(...)\n",
-    "                    data_aux.append(...)\n",
+    "                    # This normalises them to be all centered at 0.\n",
+    "                    data_aux.append(x_[i] - min(x_))\n",
+    "                    data_aux.append(y_[i] - min(y_))\n",
     "                data.append(data_aux)\n",
     "                labels.append(dir_)\n",
     "\n",
@@ -411,18 +405,18 @@
    "source": [
     "# TODO: We'll split our data into a train-test  split. \n",
     "# This technically means we're not using the testing part of the dataset but fuck it we ball. \n",
-    "x_train, x_test, y_train, y_test = ...\n",
+    "x_train, x_test, y_train, y_test = train_test_split(..., ..., test_size=0.2, shuffle=True, stratify=labels)\n",
     "\n",
     "# Create and train a RandomForestModel with sklearn (If unsure, check Sklearn RandomForests Docs - They're great!)\n",
     "# Try different models as well! RandomForest isn't the one with the best performance 👀\n",
     "model = ...()\n",
-    "... # TODO: Train on x training and y training set. \n",
+    "model.fit(x_train, y_train) # Train on x training and y training set. \n",
     "\n",
     "# TODO: Let's predict all of the the outputs for the x_testing set. \n",
-    "y_predict = ...\n",
+    "y_predict = model.predict(...)\n",
     "\n",
     "# TODO: Check the accuracy score for our predictions by comparing the y_predict to y_test. \n",
-    "score = ...\n",
+    "score = accuracy_score(..., ...)\n",
     "print('{}% of samples were classified correctly!'.format(score * 100))"
    ]
   },
@@ -485,11 +479,9 @@
     "        x_ = np.array([lm.x for lm in hand_landmarks.landmark])\n",
     "        y_ = np.array([lm.y for lm in hand_landmarks.landmark])\n",
     "\n",
-    "        # TODO: Normalize features (same as training) (Don't overcomplicate it).\n",
-    "        x_min, y_min = ...\n",
-    "\n",
-    "        # Again, take the smallest value away from each value.\n",
-    "        data_aux = np.column_stack((... - ..., ... - ...)).flatten().tolist()\n",
+    "        # ✅ Normalize features (same as training)\n",
+    "        x_min, y_min = x_.min(), y_.min()\n",
+    "        data_aux = np.column_stack((x_ - x_min, y_ - y_min)).flatten().tolist()\n",
     "\n",
     "        # ✅ Predict using trained model\n",
     "        prediction = model.predict([data_aux])[0]\n",
@@ -585,14 +577,13 @@
     "    for label in tqdm(os.listdir(DATA_DIR)):\n",
     "        # Iteratve over every individual image\n",
     "        for img_path in os.listdir(os.path.join(DATA_DIR, label)):\n",
-    "            \n",
     "            # Take the image, turn it to RGB (like before) and resize it.\n",
     "            img = cv2.imread(os.path.join(DATA_DIR, label, img_path))\n",
-    "            img = ... # TODO: Convert to RGB\n",
-    "            img = ... # TODO: Resize the image to 128x128 using the cv2.resize functionality...\n",
+    "            img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
+    "            img = cv2.resize(img, (IMG_SIZE, IMG_SIZE))\n",
     "\n",
-    "            # Add this image to our data list\n",
-    "            data.append(...)\n",
+    "            # Add this image to our list\n",
+    "            data.append(img)\n",
     "            labels.append(label_map[label])\n",
     "    \n",
     "    # Normalise colours from 0-255 to 0-1.\n",
@@ -636,14 +627,14 @@
     "labels = to_categorical(..., ...)\n",
     "\n",
     "# TODO: Split data into train and test sets \n",
-    "x_train, x_test, y_train, y_test = ...\n",
+    "x_train, x_test, y_train, y_test = train_test_split(..., ..., test_size=0.2, stratify=labels)\n",
     "\n",
     "# Define the model to distribute the workload between GPUs.\n",
     "with tf.distribute.MirroredStrategy().scope():\n",
     "    \n",
     "    # Define the model. Don't worry about the specifics for this workshop, they were discussed in the Sem1Workshop3\n",
     "    model = tf.keras.Sequential([\n",
-    "        tf.keras.layers.Conv2D(32, (3,3), activation='relu', input_shape=(IMG_SIZE, IMG_SIZE, 3)), \n",
+    "        tf.keras.layers.Conv2D(32, (3,3), activation='relu', input_shape=(IMG_SIZE, IMG_SIZE, 3)),\n",
     "        tf.keras.layers.MaxPooling2D(2,2),\n",
     "        tf.keras.layers.Conv2D(64, (3,3), activation='relu'),\n",
     "        tf.keras.layers.MaxPooling2D(2,2),\n",
@@ -701,15 +692,15 @@
     "    \"\"\"\n",
     "    # Load and preprocess image (same as before).\n",
     "    img = cv2.imread(img_path)\n",
-    "    img = ...  # TODO: Convert to RGB\n",
-    "    img = ...  # TODO: Resize to match training input size\n",
-    "    img = img.astype(\"float32\") / ...  # Normalize pixel values\n",
+    "    img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)  # Convert to RGB\n",
+    "    img = cv2.resize(img, (IMG_SIZE, IMG_SIZE))  # Resize to match training input size\n",
+    "    img = img.astype(\"float32\") / 255.0  # Normalize pixel values\n",
     "\n",
     "    # Expand dimensions to match CNN input shape (batch_size, height, width, channels)\n",
     "    img = np.expand_dims(img, axis=0)\n",
     "\n",
-    "    # TODO: Make prediction on the image using the model.\n",
-    "    predictions = ...\n",
+    "    # TODO: Make prediction on the image\n",
+    "    predictions = model.predict(...)\n",
     "    predicted_label_idx = np.argmax(predictions)  # Get index of highest probability\n",
     "\n",
     "    # Map index back to ASL letter\n",
@@ -725,6 +716,33 @@
     "predicted_label = infer_single_image_using_cnn(img_path)\n",
     "print(f\"Predicted ASL Letter: {predicted_label}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "trusted": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "trusted": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "trusted": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
