--- a/Sem2Workshop2/asl-interpreter-intermediate.ipynb
+++ b/Sem2Workshop2/asl-interpreter-intermediate.ipynb
@@ -120,9 +120,7 @@
     "# TODO: Let's load in an image and display it (using openCV imread ideally...).\n",
     "example_image = ... # Image path...\n",
     "img = ...\n",
-    "\n",
-    "# Show the image using matplot...\n",
-    "..."
+    "plt.imshow(...)"
    ]
   },
   {
@@ -153,9 +151,7 @@
    "source": [
     "# TODO: Convert the BGR image to an RGB one.\n",
     "img_rgb = ...\n",
-    "\n",
-    "# Show the image using matplot...\n",
-    "..."
+    "plt.imshow(...)"
    ]
   },
   {
@@ -199,15 +195,15 @@
    },
    "outputs": [],
    "source": [
-    "# TODO: We're going to use the hands library. \n",
-    "mp_hands = ...\n",
-    "mp_drawing = ...\n",
-    "mp_drawing_styles = ...\n",
+    "# We're going to use the hands library. \n",
+    "mp_hands = mp.solutions.hands\n",
+    "mp_drawing = mp.solutions.drawing_utils\n",
+    "mp_drawing_styles = mp.solutions.drawing_styles\n",
     "\n",
-    "# TODO: We want to now initialise the Hands class. Keep in mind, \n",
+    "# We want to now initialise the Hands class. Keep in mind, \n",
     "# we'll using it on a static image (ie static_image_mode) \n",
     "# and will want to be reasonably confident (at least 30%)\n",
-    "hands = ...\n",
+    "hands = mp_hands.Hands(static_image_mode=True, min_detection_confidence=0.3)\n",
     "\n",
     "# TODO: Process the RGB photo\n",
     "hand_landmarks = ...\n",
@@ -224,7 +220,7 @@
     "            mp_drawing_styles.get_default_hand_connections_style()\n",
     "        )\n",
     "\n",
-    "    ... # TODO: Plot the RGB image\n"
+    "    plt.imshow(...) # TODO: Plot the RGB image\n"
    ]
   },
   {
@@ -250,9 +246,9 @@
    },
    "outputs": [],
    "source": [
-    "# TODO: Instantiate the Hands class\n",
-    "mp_hands = ...\n",
-    "hands = ...\n",
+    "# Instantiate the Hands class\n",
+    "mp_hands = mp.solutions.hands\n",
+    "hands = mp_hands.Hands(static_image_mode=True, min_detection_confidence=0.3)\n",
     "\n",
     "def take_image_path_and_return_landmarks(img_path):\n",
     "    # TODO: Read the image using OpenCV (same as above!)\n",
@@ -336,11 +332,9 @@
     "                \n",
     "                data_aux = []\n",
     "                for i in range(len(hand_landmarks.landmark)):\n",
-    "                    # TODO: This normalises them to be all centered at 0.\n",
-    "                    # We want each the smallest datapoint to be taken\n",
-    "                    # away from each datapoint...\n",
-    "                    data_aux.append(...)\n",
-    "                    data_aux.append(...)\n",
+    "                    # This normalises them to be all centered at 0.\n",
+    "                    data_aux.append(x_[i] - min(x_))\n",
+    "                    data_aux.append(y_[i] - min(y_))\n",
     "                data.append(data_aux)\n",
     "                labels.append(dir_)\n",
     "\n",
@@ -485,11 +479,9 @@
     "        x_ = np.array([lm.x for lm in hand_landmarks.landmark])\n",
     "        y_ = np.array([lm.y for lm in hand_landmarks.landmark])\n",
     "\n",
-    "        # TODO: Normalize features (same as training) (Don't overcomplicate it).\n",
-    "        x_min, y_min = ...\n",
-    "\n",
-    "        # Again, take the smallest value away from each value.\n",
-    "        data_aux = np.column_stack((... - ..., ... - ...)).flatten().tolist()\n",
+    "        # ✅ Normalize features (same as training)\n",
+    "        x_min, y_min = x_.min(), y_.min()\n",
+    "        data_aux = np.column_stack((x_ - x_min, y_ - y_min)).flatten().tolist()\n",
     "\n",
     "        # ✅ Predict using trained model\n",
     "        prediction = model.predict([data_aux])[0]\n",
@@ -701,9 +693,9 @@
     "    \"\"\"\n",
     "    # Load and preprocess image (same as before).\n",
     "    img = cv2.imread(img_path)\n",
-    "    img = ...  # TODO: Convert to RGB\n",
-    "    img = ...  # TODO: Resize to match training input size\n",
-    "    img = img.astype(\"float32\") / ...  # Normalize pixel values\n",
+    "    img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)  # Convert to RGB\n",
+    "    img = cv2.resize(img, (IMG_SIZE, IMG_SIZE))  # Resize to match training input size\n",
+    "    img = img.astype(\"float32\") / 255.0  # Normalize pixel values\n",
     "\n",
     "    # Expand dimensions to match CNN input shape (batch_size, height, width, channels)\n",
     "    img = np.expand_dims(img, axis=0)\n",
