--- a/Sem2Workshop2/asl-interpreter-intermediate.ipynb
+++ b/Sem2Workshop2/asl-interpreter-intermediate.ipynb
@@ -471,8 +471,8 @@
     "    Takes an image path, extracts hand landmarks, and predicts the ASL letter using the trained model.\n",
     "    \"\"\"\n",
     "\n",
-    "    # TODO: Load and preprocess image. Again, reusing a function would be convenient. \n",
-    "    results = ...\n",
+    "    # Load and preprocess image. Again, a function would be convenient. \n",
+    "    results = take_image_path_and_return_landmarks(img_path)\n",
     "\n",
     "    if results.multi_hand_landmarks:\n",
     "        hand_landmarks = results.multi_hand_landmarks[0]  # Only take the first detected hand\n",
@@ -490,13 +490,46 @@
     "    else:\n",
     "        return \"No hand detected!\"\n",
     "\n",
+    "def draw_and_predict(img_path):\n",
+    "    # use our above function to map the hand\n",
+    "    landmarks = take_image_path_and_return_landmarks(img_path)\n",
+    "    \n",
+    "    image = cv2.imread(img_path)\n",
+    "    image_rgb = cv2.cvtColor(image, cv2.COLOR_BGR2RGB) # once again convert to RGB\n",
+    "\n",
+    "    # now we want to visualise our hand!\n",
+    "    for landmark in landmarks.multi_hand_landmarks:\n",
+    "        \n",
+    "        ## -- this is just for looks to thicken the lines drawn --\n",
+    "        custom_landmark_style = mp_drawing_styles.get_default_hand_landmarks_style()\n",
+    "        custom_connection_style = mp_drawing_styles.get_default_hand_connections_style()\n",
+    "\n",
+    "        for connection_style in custom_connection_style.values():\n",
+    "            connection_style.thickness = 10\n",
+    "        for landmark_style in custom_landmark_style.values():\n",
+    "            landmark_style.thickness = 10\n",
+    "            landmark_style.circle_radius = 5\n",
+    "        mp_drawing.draw_landmarks(\n",
+    "                image_rgb,  # image to on\n",
+    "                landmark,  # the landmarks for the hand\n",
+    "                mp_hands.HAND_CONNECTIONS,  # hand connections\n",
+    "                mp_drawing_styles.get_default_hand_landmarks_style(),\n",
+    "                mp_drawing_styles.get_default_hand_connections_style()\n",
+    "            )\n",
+    "        \n",
+    "    # and predict the Letter using our infer function\n",
+    "    predicted_label = infer_single_image_using_solution_1(img_path)\n",
+    "    # RETURN OUR PREDICTION AND IMAGE!\n",
+    "    return predicted_label, image_rgb\n",
+    "\n",
     "\n",
     "# -------------------------\n",
     "# 🚀 Example Usage\n",
     "# -------------------------\n",
     "img_path = \"/kaggle/input/another/IMG_4193.JPG\"  # Replace with your actual test image\n",
-    "predicted_label = infer_single_image_using_solution_1(img_path)\n",
-    "print(f\"Predicted ASL Letter: {predicted_label}\")\n"
+    "predicted_label, image = draw_and_predict(img_path)\n",
+    "plt.imshow(image)\n",
+    "print(f\"Predicted ASL Letter: {predicted_label}\")"
    ]
   },
   {
