Made final code

--- a/Sem2Workshop3/flappybird.ipynb
+++ b/Sem2Workshop3/flappybird.ipynb
@@ -453,13 +453,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -495,13 +488,6 @@
     "    def __len__(self):\n",
     "        return len(self.memory)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -992,8 +978,6 @@
     "    \n",
     "    plt.tight_layout()\n",
     "    plt.show()\n",
-    "\n",
-    "\n",
     "    \n",
     "    return policy_dqn\n",
     "\n",
@@ -1021,23 +1005,7 @@
     "    \"\"\"\n",
     "    agent = Agent()\n",
     "    model = agent.train(num_episodes=num_episodes, update_display_every=2)\n",
-    "    return model, agent\n",
-    "\n",
-    "\n",
-    "def visualise_trained_agent(agent=None, model_path=\"best_flappy_model.pt\"):\n",
-    "    \"\"\"\n",
-    "    visualise a trained agent playing Flappy Bird\n",
-    "    \n",
-    "    Parameters:\n",
-    "    - agent: Agent instance (creates new one if None)\n",
-    "    - model_path: Path to the trained model\n",
-    "    \n",
-    "    Returns:\n",
-    "    - Animation of the agent playing\n",
-    "    \"\"\"\n",
-    "    if agent is None:\n",
-    "        agent = Agent()\n",
-    "    return agent.run_trained_model(model_path=model_path)\n"
+    "    return model, agent\n"
    ]
   },
   {
@@ -1046,94 +1014,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "def download_pretrained_model(github_url, local_filename=\"pretrained_model.pt\"):\n",
-    "    \"\"\"\n",
-    "    Download a pre-trained model from GitHub\n",
-    "    \n",
-    "    Parameters:\n",
-    "    - github_url: URL to the model file on GitHub\n",
-    "    - local_filename: Where to save the downloaded model\n",
-    "    \n",
-    "    Returns:\n",
-    "    - Path to the downloaded model\n",
-    "    \"\"\"\n",
-    "    try:\n",
-    "        print(f\"Downloading pre-trained model from {github_url}...\")\n",
-    "        \n",
-    "        # Make HTTP request to download the file\n",
-    "        response = requests.get(github_url, stream=True)\n",
-    "        response.raise_for_status()  # Raise an exception for HTTP errors\n",
-    "        \n",
-    "        # Get the total file size if available\n",
-    "        total_size = int(response.headers.get('content-length', 0))\n",
-    "        \n",
-    "        # Download with progress bar\n",
-    "        with open(local_filename, 'wb') as f:\n",
-    "            if total_size == 0:  # No content length header\n",
-    "                f.write(response.content)\n",
-    "            else:\n",
-    "                # Use tqdm for progress bar\n",
-    "                with tqdm(total=total_size, unit='B', unit_scale=True) as pbar:\n",
-    "                    for chunk in response.iter_content(chunk_size=8192):\n",
-    "                        if chunk:\n",
-    "                            f.write(chunk)\n",
-    "                            pbar.update(len(chunk))\n",
-    "        \n",
-    "        print(f\"Model successfully downloaded to {local_filename}\")\n",
-    "        return local_filename\n",
-    "    \n",
-    "    except Exception as e:\n",
-    "        print(f\"Error downloading model: {e}\")\n",
-    "        return None\n",
-    "\n",
-    "def load_and_run_pretrained_model(github_url=\"https://github.com/EdinburghAI/flappy-bird-model/raw/main/flappy_model.pt\", model_path=\"pretrained_model.pt\", max_steps=1000):\n",
-    "    \"\"\"\n",
-    "    Download a pre-trained model from GitHub, load it, and visualize it playing Flappy Bird\n",
-    "    \n",
-    "    Parameters:\n",
-    "    - github_url: URL to the model file on GitHub\n",
-    "    - model_path: Where to save the downloaded model\n",
-    "    - max_steps: Maximum number of steps to run the visualization\n",
-    "    \n",
-    "    Returns:\n",
-    "    - Animation of the model playing\n",
-    "    \"\"\"\n",
-    "    try:\n",
-    "        # Download the model if it doesn't exist\n",
-    "        if not os.path.exists(model_path):\n",
-    "            print(f\"Downloading pre-trained model from {github_url}...\")\n",
-    "            \n",
-    "            # Make HTTP request to download the file\n",
-    "            response = requests.get(github_url, stream=True)\n",
-    "            response.raise_for_status()  # Raise an exception for HTTP errors\n",
-    "            \n",
-    "            # Get the total file size if available\n",
-    "            total_size = int(response.headers.get('content-length', 0))\n",
-    "            \n",
-    "            # Download with progress bar\n",
-    "            with open(model_path, 'wb') as f:\n",
-    "                if total_size == 0:  # No content length header\n",
-    "                    f.write(response.content)\n",
-    "                else:\n",
-    "                    # Use tqdm for progress bar\n",
-    "                    with tqdm(total=total_size, unit='B', unit_scale=True) as pbar:\n",
-    "                        for chunk in response.iter_content(chunk_size=8192):\n",
-    "                            if chunk:\n",
-    "                                f.write(chunk)\n",
-    "                                pbar.update(len(chunk))\n",
-    "            \n",
-    "            print(f\"Model successfully downloaded to {model_path}\")\n",
-    "        else:\n",
-    "            print(f\"Using existing model file at {model_path}\")\n",
-    "        \n",
-    "        # Create agent and run the model\n",
-    "        agent = Agent()\n",
-    "        return agent.run_trained_model(model_path=model_path, max_steps=max_steps)\n",
-    "    \n",
-    "    except Exception as e:\n",
-    "        print(f\"Error: {e}\")\n",
-    "        return None\n"
+    "\n"
    ]
   },
   {
