--- a/Sem2Workshop3/flappybird.ipynb
+++ b/Sem2Workshop3/flappybird.ipynb
@@ -137,11 +137,11 @@
     }
    ],
    "source": [
-    "#!pip install flappy-bird-gymnasium\n",
-    "#!pip install gymnasium\n",
-    "#!pip install matplotlib\n",
-    "#!pip install torch\n",
-    "#!pip install tqdm\n",
+    "!pip install flappy-bird-gymnasium\n",
+    "!pip install gymnasium\n",
+    "!pip install matplotlib\n",
+    "!pip install torch\n",
+    "!pip install tqdm\n",
     "\n",
     "# Cell 1: Import necessary libraries\n",
     "import gymnasium as gym\n",
@@ -1014,7 +1014,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "# Now let's run the training for 500 episodes!\n",
+    "run_training(500)\n"
    ]
   },
   {
