started filling out the worjshop and added visualisation

--- a/Sem2Workshop3/flappybird-all-the-one-level.ipynb
+++ b/Sem2Workshop3/flappybird-all-the-one-level.ipynb
@@ -158,10 +158,37 @@
     "\n",
     "# Let's look at what information we get from the environment\n",
     "print(\"1. What does the observation space look like?\")\n",
-    "print(f\"Observation space: {env.observation_space}\")\n",
-    "print(f\"Shape: {env.observation_space.shape}\")\n",
-    "print(f\"This means we get {env.observation_space.shape[0]} numbers that represent the state\\n\")\n",
-    "\n"
+    "# TODO use some print statements to explore the observation space!\n",
+    "# Try looking at things like:\n",
+    "# -- the actual observation space\n",
+    "# -- the shape of the space\n",
+    "# -- how many dimensions (numbers) that represent the state"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "180! that is a lot of data, This observation space uses the lidar scan infront of the bird and thus there is a lot of extra data.\n",
+    "Could we potentially compress this information to use only the most important information?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env.close()\n",
+    "\n",
+    "# What about when we set lidar to false?\n",
+    "env = gym.make('FlappyBird-v0', render_mode=\"rgb_array\", use_lidar=False)\n",
+    "\n",
+    "# Let's look at what information we get from the environment\n",
+    "# TODO do the same again and compare the results,\n",
+    "\n",
+    "# This is significantly less information, \n",
+    "# can you think of a way we might be capturing only the useful information from the enviroment?\n"
    ]
   },
   {
@@ -183,24 +210,8 @@
     "- player's vertical velocity\n",
     "- player's rotation\n",
     "\n",
-    "But what about when we set Lidar to false?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "env.close()\n",
-    "\n",
-    "# What about when we set lidar to false?\n",
-    "env = gym.make('FlappyBird-v0', render_mode=\"rgb_array\", use_lidar=False)\n",
-    "\n",
-    "# Let's look at what information we get from the environment\n",
-    "print(\"1. What does the observation space look like?\")\n",
-    "print(f\"Observation space: {env.observation_space}\")\n",
-    "print(f\"Shape: {env.observation_space.shape}\")"
+    "Now lets explore the action space!\n",
+    "This is the space of available actions our model can perform"
    ]
   },
   {
@@ -210,9 +221,13 @@
    "outputs": [],
    "source": [
     "print(\"2. What actions can our agent take?\")\n",
-    "print(f\"Action space: {env.action_space}\")\n",
-    "print(f\"Number of possible actions: {env.action_space.n}\")\n",
-    "print(\"In Flappy Bird, action 0 = do nothing, action 1 = flap wings\\n\")"
+    "\n",
+    "# TODO Similar to what we did above can you explore:\n",
+    "# -- the action space\n",
+    "# -- the number of possible actions\n",
+    "# think about what these actions may represent\n",
+    "\n",
+    "print(\"In Flappy Bird, action 0 = do nothing, action 1 = flap wings\\n\")\n"
    ]
   },
   {
@@ -223,7 +238,10 @@
    "source": [
     "initial_state, info = env.reset()\n",
     "print(\"3. What does the initial state look like?\")\n",
-    "print(f\"Initial state: {initial_state}\")\n",
+    "\n",
+    "# now lets explore what the intial state looks like, \n",
+    "# TODO add a print statement to show the intial state\n",
+    "\n",
     "print(f\"\"\"The state represents: \n",
     "      \n",
     "      - the last pipe's horizontal position\n",
@@ -879,7 +897,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def visualise_trained_agent(agent=None, model_path=\"best_flappy_model.pt\"):\n",
+    "    \"\"\"\n",
+    "    visualise a trained agent playing Flappy Bird\n",
+    "    \n",
+    "    Parameters:\n",
+    "    - agent: Agent instance (creates new one if None)\n",
+    "    - model_path: Path to the trained model\n",
+    "    \n",
+    "    Returns:\n",
+    "    - Animation of the agent playing\n",
+    "    \"\"\"\n",
+    "    if agent is None:\n",
+    "        agent = Agent()\n",
+    "    return agent.run_trained_model(model_path=model_path)\n",
+    "\n",
+    "visualise_trained_agent()"
+   ]
   }
  ],
  "metadata": {
