--- a/Sem2Workshop3/flappybird-solutions.ipynb
+++ b/Sem2Workshop3/flappybird-solutions.ipynb
@@ -1023,7 +1023,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def visualise_trained_agent(agent=None, model_path=\"best_flappy_model.pt\"):\n",
+    "    \"\"\"\n",
+    "    visualise a trained agent playing Flappy Bird\n",
+    "    \n",
+    "    Parameters:\n",
+    "    - agent: Agent instance (creates new one if None)\n",
+    "    - model_path: Path to the trained model\n",
+    "    \n",
+    "    Returns:\n",
+    "    - Animation of the agent playing\n",
+    "    \"\"\"\n",
+    "    if agent is None:\n",
+    "        agent = Agent()\n",
+    "    return agent.run_trained_model(model_path=model_path)\n",
+    "\n",
+    "visualise_trained_agent()"
+   ]
   }
  ],
  "metadata": {
