updated the incomplete workshop

--- a/Sem2Workshop3/flappybird-all-the-one-level.ipynb
+++ b/Sem2Workshop3/flappybird-all-the-one-level.ipynb
@@ -267,11 +267,14 @@
    "source": [
     "next_state, reward, terminated, truncated, info = env.step(1)  # Take action \"flap\"\n",
     "print(\"\\n4. After taking action 'flap':\")\n",
-    "print(f\"New state: {next_state}\")\n",
-    "print(f\"Reward: {reward}\")\n",
-    "print(f\"Game Over? {terminated}\")\n",
+    "# Now we have taken a step we can asses the next state\n",
+    "# TODO try printing some of the aspects of our enviroment\n",
+    "# try:\n",
+    "# -- next state\n",
+    "# -- reward\n",
+    "# -- the terminated flag\n",
     "\n",
-    "# Render the environment to see what's happening\n",
+    "# We can also render the environment to see what's happening\n",
     "frame = env.render()\n",
     "plt.figure(figsize=(8, 6))\n",
     "plt.imshow(frame)\n",
@@ -758,10 +761,15 @@
     "                episode_loss += loss\n",
     "                num_opt_steps += 1\n",
     "                \n",
+    "###################################################################################################\n",
+    "                # -- TODO COMPLETE -- \n",
+    "    \n",
     "                # Update the epsilon. We want it to be the bigger of the two:\n",
     "                # 1. The current epsilon times the decay rate. \n",
-    "                # 2. The minimum epsilon. \n",
-    "                epsilon = max(epsilon * self.epsilon_decay, self.epsilon_min)\n",
+    "                # 2. The minimum epsilon.\n",
+    "                # TODO complete our epsilon function!\n",
+    "                epsilon = ...\n",
+    "###################################################################################################\n",
     "                \n",
     "                # Sync networks\n",
     "                if step_count > self.network_sync_rate:\n",
